--- a/index.html
+++ b/index.html
@@ -237,6 +237,56 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="teacher-section">
+            <div class="container">
+                <div class="teccher-title">
+                    <img src="img/icon-heading4.png" alt="">
+                    <h2>Ваши преподаватели</h2>
+                </div>
+                <div class="teacher-content">
+                    <div class="teacher-box">
+                        <img src="img/photo1.png" alt="">
+                        <h2>Дмитрий Иванов</h2>
+                        <p>Специалист по видеокартам</p>
+                        <button type="button">Биография</button>
+                    </div>
+                    <div class="teacher-box">
+                        <img src="img/photo2.png" alt="">
+                        <h2>Дмитрий Иванов</h2>
+                        <p>Специалист по видеокартам</p>
+                        <button type="button">Биография</button>
+                    </div>
+                    <div class="teacher-box">
+                        <img src="img/photo3.png" alt="">
+                        <h2>Дмитрий Иванов</h2>
+                        <p>Специалист по видеокартам</p>
+                        <button type="button">Биография</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="article-section">
+            <div class="container">
+                <div class="article-content">
+                    <h2>Статьи каждую неделю</h2>
+                    <p>Больше 90% учеников прошли полный курс и смогли собрать свой первый компьютер</p>
+                    <div class="submit-wrapper">
+                        <input type="email" placeholder="Email">
+                        <button type="button">Подписаться</button>
+                    </div>
+                    <div class="image-links">
+                        <a href="#"><img src="img/vk.png" alt=""></a>
+                        <a href="#"><img src="img/youtube.png" alt=""></a>
+                        <a href="#"><img src="img/facebook.png" alt=""></a>
+                        <a href="#"><img src="img/instagram.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     </main>
 </body>
 </html>
